# atendeaqui-python

./: .gitignore  LICENSE  README.md  pyproject.toml
src/atendeaqui/: __init__.py  _http.py  client.py  exceptions.py
src/atendeaqui/clients/: __init__.py  models.py
src/atendeaqui/onboarding/: __init__.py  models.py
tests/: conftest.py  test_client.py  test_clients.py  test_exceptions.py  test_models.py
