[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atendeaqui"
version = "0.1.0"
description = "SDK Python para a plataforma AtendeAqui"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "AtendeAqui" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "responses>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["src/atendeaqui"]
